# Rina

./: .gitignore  CMakeLists.txt  Model.cpp  Model.h  README.md  main.cpp
cJSON/: CTestTestfile.cmake  cJSONConfigVersion.cmake  libcjson.pc
cJSON/fuzzing/: CTestTestfile.cmake
cJSON/tests/: CTestTestfile.cmake  compare_tests  misc_tests  parse_array  parse_examples  parse_hex4  parse_number  parse_object  parse_string  parse_value  parse_with_opts  print_array  print_number  print_object  print_string  print_value
client/: CMakeLists.txt  client  client.cpp  client.h  test_main.cpp
gui/: client.py  common.py  log.py  login.py  main.py  message.py  server.py  user.py
gui/views/: login.py
log/: log.h
python/: chat.py  client.py  common.py  log.py  login.py  main.py  message.py  server.py  test.py  user.py
server/: CMakeLists.txt  server  server.cpp  server.h  test_main.cpp
socket/: CMakeLists.txt  Socket.cpp  Socket.h  socket_test  test_main.cpp
src/: client.cpp  client.h  client_test.cpp  model.cpp  model.h  server.cpp  server.h  socket.cpp  socket.h  socket_test.cpp  thread.cpp  thread_test.cpp
thread/: CMakeLists.txt  Thread.cpp  Thread.h  test_thread  test_thread.cpp
